--- a/Algorithmic Toolbox/Week2/CMakeLists.txt
+++ b/Algorithmic Toolbox/Week2/CMakeLists.txt
@@ -1,7 +1,6 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin/Week2)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -O2 -std=c++14")
+set(CMAKE_CXX_STANDARD 14)
 
 add_executable(FibonacciHuge "fibonacci_huge.cpp")
 add_executable(FibonacciLastDigit "fibonacci_last_digit.cpp")
